--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,12 @@
 export("%>%")
 export(fix_dispersion)
 export(interpolate)
+export(spatial_plot)
 import(dplyr)
+import(ggplot2)
 import(purrr)
+importFrom(RcppRoll,roll_max)
+importFrom(RcppRoll,roll_min)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(zoo,na.approx)
