--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(VTI_saccade)
 export(dist_to_visual_angle)
 export(fix_dispersion)
 export(interpolate)
+export(smoother)
 export(spatial_plot)
 import(dplyr)
 import(ggplot2)
