--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(interpolate)
 export(smoother)
 export(spatial_plot)
 import(dplyr)
+import(ggforce)
 import(ggplot2)
 import(purrr)
 importFrom(RcppRoll,roll_max)
