major update to VTI_saccade and fix_dispersion. Update readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AOI_time)
 export(VTI_saccade)
 export(combine_eyes)
 export(dist_to_visual_angle)
+export(fix_dispersion)
 export(interpolate)
 export(smoother)
 export(spatial_plot)
@@ -15,6 +16,7 @@ import(purrr)
 importFrom(RcppRoll,roll_max)
 importFrom(RcppRoll,roll_min)
 importFrom(magrittr,"%>%")
+importFrom(rdist,cdist)
 importFrom(rlang,.data)
 importFrom(zoo,na.approx)
 importFrom(zoo,na.spline)
