--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ export(spatial_plot)
 import(dplyr)
 import(ggforce)
 import(ggplot2)
-import(purrr)
+import(rlang)
 importFrom(RcppRoll,roll_max)
 importFrom(RcppRoll,roll_min)
+importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(rdist,cdist)
 importFrom(rlang,.data)
