tidying up dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,13 +13,15 @@ import(dplyr)
 import(ggforce)
 import(ggplot2)
 import(rlang)
-importFrom(RcppRoll,roll_max)
-importFrom(RcppRoll,roll_min)
+importFrom(dplyr,between)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(pbapply,pblapply)
 importFrom(rdist,cdist)
 importFrom(rlang,.data)
+importFrom(stats,loess)
+importFrom(stats,predict)
 importFrom(zoo,na.approx)
 importFrom(zoo,na.spline)
 importFrom(zoo,na.trim)
