--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-pkgurl: ~
-=======
-url: ~
->>>>>>> 56e89747d38d2f377e0a2e3b5dc1d2b8e2fb3be9
+url: https://tombeesley.github.io/eyetools/
 template:
   bootstrap: 5
 
