--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,12 @@ importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
+importFrom(stats,aggregate)
+importFrom(stats,dist)
 importFrom(stats,loess)
+importFrom(stats,na.exclude)
 importFrom(stats,predict)
+importFrom(utils,tail)
 importFrom(zoo,na.approx)
 importFrom(zoo,na.spline)
 importFrom(zoo,na.trim)
