update with fix for documentation of spatial plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ import(rlang)
 importFrom(dplyr,between)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(magick,image_read)
 importFrom(magrittr,"%>%")
 importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
