added new function seq_plot updated readme and news

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(combine_eyes)
 export(dist_to_visual_angle)
 export(fix_dispersion)
 export(interpolate)
+export(seq_plot)
 export(smoother)
 export(spatial_plot)
 import(dplyr)
