--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(stats,dist)
 importFrom(stats,loess)
 importFrom(stats,na.exclude)
 importFrom(stats,predict)
+importFrom(tidyr,separate_longer_delim)
 importFrom(utils,tail)
 importFrom(zoo,na.approx)
 importFrom(zoo,na.spline)
