--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: 2.19.2
+pandoc: 3.1.11
 pkgdown: 2.0.6
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-02-16T12:04Z
+articles:
+  eyetools: eyetools.html
+last_built: 2024-09-03T08:38Z
 urls:
   reference: https://tombeesley.github.io/eyetools/reference
   article: https://tombeesley.github.io/eyetools/articles
