minor edits around dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,15 @@ importFrom(magrittr,"%>%")
 importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
+importFrom(stats,complete.cases)
 importFrom(stats,dist)
 importFrom(stats,loess)
+importFrom(stats,median)
 importFrom(stats,na.exclude)
 importFrom(stats,predict)
+importFrom(stats,setNames)
+importFrom(utils,head)
+importFrom(utils,stack)
+importFrom(utils,tail)
 importFrom(zoo,na.approx)
 importFrom(zoo,na.spline)
