fixed minimum duration error in VTI_saccade

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(VTI_saccade)
 export(combine_eyes)
 export(dist_to_visual_angle)
 export(fix_dispersion)
+export(fix_inverse_saccade)
 export(interpolate)
 export(seq_plot)
 export(smoother)
