--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,10 +27,12 @@ Imports:
     zoo
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 URL: https://tombeesley.github.io/eyetools/
+Config/testthat/edition: 3
