--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AOI_seq)
 export(AOI_time)
 export(VTI_saccade)
 export(combine_eyes)
+export(compare_algorithms)
 export(dist_to_visual_angle)
 export(fix_dispersion)
 export(fix_inverse_saccade)
@@ -24,12 +25,15 @@ importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
 importFrom(stats,complete.cases)
+importFrom(stats,cor.test)
 importFrom(stats,dist)
 importFrom(stats,loess)
 importFrom(stats,median)
 importFrom(stats,na.exclude)
 importFrom(stats,predict)
+importFrom(stats,reshape)
 importFrom(stats,setNames)
+importFrom(stats,time)
 importFrom(utils,head)
 importFrom(utils,stack)
 importFrom(utils,tail)
