update man files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,21 @@
 export("%>%")
 export(AOI_seq)
 export(AOI_time)
-export(VTI_saccade)
 export(combine_eyes)
 export(compare_algorithms)
 export(dist_to_visual_angle)
-export(fix_dispersion)
-export(fix_inverse_saccade)
+export(fixation_VTI)
+export(fixation_dispersion)
+export(hdf5_to_csv)
 export(interpolate)
-export(seq_plot)
+export(plot_seq)
+export(plot_spatial)
+export(saccade_VTI)
 export(smoother)
-export(spatial_plot)
 import(dplyr)
 import(ggforce)
 import(ggplot2)
+import(hdf5r)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
