--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Tools for eye data analysis
 Version: 0.5.1
 Authors@R: c(
     person("Beesley", "Tom", email = "t.beesley@lancaster.ac.uk", role = c("aut", "cre")),
-    person("Ivory", "Matthew", email = "matthew.ivory@lancaster.ac.uk", role = "ctb"))
+    person("Ivory", "Matthew", email = "matthew.ivory@lancaster.ac.uk", role = "aut"))
 Description: A set of tools for eye data processing. The intended flow is
     from data processing, to fixation analysis, to data visualisation and
     trial level summaries.
@@ -16,6 +16,7 @@ Imports:
     ggforce,
     ggplot2,
     glue,
+    hdf5r,
     lifecycle,
     magick,
     magrittr,
