--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AOI_seq)
 export(AOI_time)
 export(combine_eyes)
 export(compare_algorithms)
+export(conditional_transform)
 export(dist_to_visual_angle)
 export(fixation_VTI)
 export(fixation_dispersion)
