--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,8 +1,9 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^fix_dispersion_old\.R$
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
 ^\.github$
 ^vignettes/articles$
+^index\.Rmd$
+*.yml
