--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,14 @@ Package: eyetools
 Title: Tools for Eye Data Analysis
 Version: 0.6.1
 Authors@R: c(
-    person("Beesley", "Tom", email = "t.beesley@lancaster.ac.uk", role = c("aut", "cre")),
-    person("Ivory", "Matthew", email = "matthew.ivory@lancaster.ac.uk", role = "aut"))
+    person("Beesley", "Tom", , "matthew.ivory@lancaster.ac.uk", role = c("aut", "cre")),
+    person("Ivory", "Matthew", , "matthew.ivory@lancaster.ac.uk", role = "aut")
+  )
 Description: A set of tools for eye data processing. The intended flow is
     from data processing, to fixation analysis, to data visualisation and
     trial level summaries.
 License: GPL-3
+URL: https://tombeesley.github.io/eyetools/
 Depends: 
     R (>= 2.10)
 Imports: 
@@ -27,11 +29,14 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
-VignetteBuilder: knitr
+    testthat (>= 3.0.0),
+    tidyverse
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
+cph: Tom Beesley
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-URL: https://tombeesley.github.io/eyetools/
-Config/testthat/edition: 3
+Language: en-GB
