--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Type: Package
 Package: eyetools
-Title: Tools for Eye Data Analysis
-Version: 0.7.0
+Title: Analyse Eye Data
+Version: 0.7.1
 Authors@R: c(
-    person("Beesley", "Tom", , "matthew.ivory@lancaster.ac.uk", role = c("aut", "cre")),
+    person("Beesley", "Tom", , "t.beesley@lancaster.ac.uk", role = c("aut", "cre")),
     person("Ivory", "Matthew", , "matthew.ivory@lancaster.ac.uk", role = "aut")
   )
-Description: A set of tools for easier eye data processing. 
-  It enables automation of actions across the pipeline starting from combining binocular data, repairing missing data, 
+Description: Enables the automation of actions across the pipeline starting from combining raw binocular data, repairing missing data, 
   through to event-related processing (fixations, saccades, time in AOIs), to data visualisation. These tools take relatively raw (trial, time, x, and y form) data 
   and can be used to return fixations, saccades, and AOI entries and time spent in AOIs. 
-  As the tools rely on this basic data format, the functions can work with data from any eye tracking device.
+  As the tools rely on this basic data format, the functions can work with data from any eye tracking device. 
+  Implements fixation and saccade detection using methods proposed by Salvucci and Goldberg (2000) <doi:10.1145/355017.355028>
 License: GPL-3
 cph: Tom Beesley
 URL: https://tombeesley.github.io/eyetools/
+BugReports: https://github.com/tombeesley/eyetools/issues
 Depends: 
     R (>= 2.10)
 Imports: 
