--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Enables the automation of actions across the pipeline starting from
   through to event-related processing (fixations, saccades, time in AOIs), to data visualisation. These tools take relatively raw (trial, time, x, and y form) data 
   and can be used to return fixations, saccades, and AOI entries and time spent in AOIs. 
   As the tools rely on this basic data format, the functions can work with data from any eye tracking device. 
-  Implements fixation and saccade detection using methods proposed by Salvucci and Goldberg (2000) <doi:10.1145/355017.355028>
+  Implements fixation and saccade detection using methods proposed by Salvucci and Goldberg (2000) <doi:10.1145/355017.355028>.
 License: GPL-3
 URL: https://tombeesley.github.io/eyetools/
 BugReports: https://github.com/tombeesley/eyetools/issues
