--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Enables the automation of actions across the pipeline starting
     and time spent in AOIs. As the tools rely on this basic data format, the
     functions can work with data from any eye tracking device. Implements
     fixation and saccade detection using methods proposed by Salvucci and
-    Goldberg (2000) <doi:10.1145/355017.355028>
+    Goldberg (2000) <doi:10.1145/355017.355028>.
 License: GPL-3
 URL: https://tombeesley.github.io/eyetools/
 BugReports: https://github.com/tombeesley/eyetools/issues
