--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fixation_VTI)
 export(fixation_dispersion)
 export(hdf5_to_csv)
 export(interpolate)
+export(plot_AOI_growth)
 export(plot_seq)
 export(plot_spatial)
 export(saccade_VTI)
@@ -24,6 +25,7 @@ importFrom(magick,image_read)
 importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
+importFrom(stats,ave)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,dist)
@@ -39,4 +41,5 @@ importFrom(utils,head)
 importFrom(utils,stack)
 importFrom(utils,tail)
 importFrom(zoo,na.approx)
+importFrom(zoo,na.locf)
 importFrom(zoo,na.spline)
