update namespace and deafult value for create_AOI_df()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(AOI_time_binned)
 export(combine_eyes)
 export(compare_algorithms)
 export(conditional_transform)
+export(create_AOI_df)
 export(dist_to_visual_angle)
 export(fixation_VTI)
 export(fixation_dispersion)
