--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ export(conditional_transform)
 export(dist_to_visual_angle)
 export(fixation_VTI)
 export(fixation_dispersion)
-export(hdf5_to_csv)
+export(hdf5_get_event)
+export(hdf5_to_df)
 export(interpolate)
 export(plot_AOI_growth)
 export(plot_seq)
