--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(hdf5_get_event)
 export(hdf5_to_df)
 export(interpolate)
 export(plot_AOI_growth)
+export(plot_heatmap)
 export(plot_seq)
 export(plot_spatial)
 export(saccade_VTI)
