--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(ggforce)
 import(ggplot2)
 import(hdf5r)
 import(rlang)
+import(viridis)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magick,image_read)
