build, checks, and doc updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(smoother)
 import(ggforce)
 import(ggplot2)
 import(hdf5r)
+import(pbapply)
 import(rlang)
 import(viridis)
 importFrom(glue,glue)
