package builds without errors and is updated to 0.9.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(ggforce)
 import(ggplot2)
 import(hdf5r)
 import(pbapply)
+import(png)
 import(rlang)
 import(viridis)
 importFrom(glue,glue)
