--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(plot_seq)
 export(plot_spatial)
 export(saccade_VTI)
 export(smoother)
+import(abind)
 import(ggforce)
 import(ggplot2)
 import(hdf5r)
